--- a/src/quizRender/templates/take_quiz/includes/footer.html
+++ b/src/quizRender/templates/take_quiz/includes/footer.html
@@ -26,6 +26,9 @@
     <div class="copyright">
         <p>Copyright © {{site.site_name}} <script>document.write(new Date().getFullYear())</script>.
         </p>
+        <p class="text-center">
+            Powered by
+        </p>
         {% if site.site_logo %}
             <a class="text-center justify-content-center text-center d-flex mx-auto" href="{% url 'home' %}" class="logo " style="max-width:20rem;max-height:5rem;">
                 <span class="">
