--- a/src/quizPayments/templates/quiz_payments/payment_form.html
+++ b/src/quizPayments/templates/quiz_payments/payment_form.html
@@ -1,6 +1,7 @@
 <form id="payment-form">
     <h5>Complete your order</h5>
     <br><br>
+    Total: {{order.total}}
 
     <div id="payment-element">
         <!-- Elements will create form elements here -->
