Remove go back payment form

--- a/src/quizPayments/templates/quiz_payments/payment_form.html
+++ b/src/quizPayments/templates/quiz_payments/payment_form.html
@@ -16,16 +16,16 @@
 
 
         <button class="btn site-button btn-primary  ms-auto float-end "  id="submit">Pay now</button>
-
+{% comment %} 
         <a  class="light small ml-0 mr-auto"
-           {% comment %} hx-get="{% url 'go_back_purchase' response_id %}" {% endcomment %}
+           hx-get="{% url 'go_back_purchase' response_id %}"
            hx-trigger="click once"
            hx-target="#purchaseQuiz"
            hx-encoding="multipart/form-data"
            hx-swap="outerHTML"
            role="button"
         >
-            < Go back</a>
+            < Go back</a> {% endcomment %}
     </div>
 </form>
 <script>
