--- a/src/quizRender/templates/quiz_completed_content.html
+++ b/src/quizRender/templates/quiz_completed_content.html
@@ -195,6 +195,11 @@
         </div>
         {% endif %}
 
+        <strong class="my-3">
+            Summary
+        </strong>
+
+        {% include 'quizData/response_details_render.html' %}
 
     </div>
 </div>
