--- a/src/quizRender/templates/take_quiz_elements/single_choice_input_element.html
+++ b/src/quizRender/templates/take_quiz_elements/single_choice_input_element.html
@@ -7,10 +7,10 @@
 >
 
 
-    <select
+    <select required style="opacity:0; position:fixed;"
 
 
-        id="question_{{element.id}}" name="{{element.id}}" id="singleC_{{element.id}}" class="form-select d-none"
+        id="question_{{element.id}}" name="{{element.id}}" id="singleC_{{element.id}}" class="form-select"
     >
         {% for option in element.get_element_type.element.get_single_choice_choices %}
 
