--- a/src/quizRender/templates/quiz_completed_content.html
+++ b/src/quizRender/templates/quiz_completed_content.html
@@ -82,7 +82,7 @@
                             <span class="review-text">(34 reviews) / </span><a class="product-review" href="" data-toggle="modal" data-target="#reviewModal">Write a review?</a>
                         </div> {% endcomment %}
                         <div class="d-table mb-2">
-                            <p class="price float-left d-block">{{product.currency.currency_symbol}}{{product.price}} {{product.currency}}</p>
+                            <p class=" float-left d-block">{{product.currency.currency_symbol}}{{product.price}} {{product.currency}}</p>
                         </div>
                    
                         <p class="text-content">{{product.description|safe}}</p>
