--- a/src/quizRender/templates/take_quiz/includes/header.html
+++ b/src/quizRender/templates/take_quiz/includes/header.html
@@ -38,7 +38,7 @@
 
 
         .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-            {{site.site_headings_css}}
+            color: #302929 !important
         }
 
 
