--- a/src/quizRender/templates/quiz_completed_content.html
+++ b/src/quizRender/templates/quiz_completed_content.html
@@ -32,7 +32,7 @@
             </h3>
         {% endif %}
 
-        {% if product %}
+        {% if product  and user_quiz.stripe_public_key %}
 
         <div class="row">
             <div class="col-xl-3 col-lg-6  col-md-6 col-xxl-5 ">
