Improve frontend design

--- a/src/quizCreation/templates/element_forms/TextInput.html
+++ b/src/quizCreation/templates/element_forms/TextInput.html
@@ -32,7 +32,7 @@
                 {% else %}
                     data-dismiss="modal"
                 {% endif %}
-                class="btn btn-danger light"
+                class="btn btn-danger light" style="border-radius:0 !important;"
             >
                 {% if edit %}
                     Cancel
