--- a/src/quizCreation/templates/element_forms/text.html
+++ b/src/quizCreation/templates/element_forms/text.html
@@ -36,7 +36,7 @@
                    href={% url 'quiz_page_edit' user_quiz.id quiz_page.id %}
 
                {% endif %}
-               class="btn btn-danger light"
+               class="btn btn-danger light" style="border-radius:0 !important;"
             >
 
                 Go back
