--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -108,7 +108,7 @@
 
 
                                     <div class="modal-footer">
-                                        <a type="button" class="btn btn-danger light" data-dismiss="modal"
+                                        <a type="button" class="btn btn-danger light" style="border-radius:0 !important;" data-dismiss="modal"
                                            hx-trigger="click"
                                            hx-target="#page_elements"
                                            hx-swap=outerHTML
