--- a/src/templates/home_site2/includes/header.html
+++ b/src/templates/home_site2/includes/header.html
@@ -136,7 +136,7 @@
             <!--**********************************
             Header start
         ***********************************-->
-            <div class="header px-5">
+            <div class="header px-5" style="height:5rem;">
                 <div class="header-content px-2">
                     <div class="navbar-brand-box ml-4 d-flex text-center justify-content-center">
                         <a href="{% url 'home' %}" class="logo logo-light">
@@ -200,7 +200,7 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a style="width:100%;" href="{% url 'dashboard_home' %}" type="button" class="btn btn-primary site-button"
+                                        <a style="width:100%;" href="{% url 'dashboard_home' %}" type="button" class="btn-lg btn-primary site-button"
                                            role="button" data-toggle="" aria-haspopup="true"
                                            aria-expanded="false">Dashboard </a>
                                     </li>
@@ -281,7 +281,7 @@
             Sidebar end
         ***********************************-->
 
-            <div class="mt-5 container-fluid" style="min-height:30rem;">
+            <div class="mt-5 container-fluid" style="min-height:30rem;background: white!important;">
                 <div class="content-body col-12 col-md-10 mx-auto">
 
                     {% if messages %}
