--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -30,7 +30,7 @@
             <div class="text-align-center;">
 
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center text-center">
-                    <a href="{% url 'register_user' %}" type="button" class="btn btn-primary btn-lg site-button px-4 me-md-2 mx-1">Start free trial now</a>
+                    <a href="{% url 'register_user' %}" type="button" class="  btn-lg site-button px-4 me-md-2 mx-1">Start free trial now</a>
                 </div>
                 <p class="text-center">Start your free trial today. No credit card required
                 </p>
@@ -42,12 +42,16 @@
         <div class="col-10 col-sm-8 col-lg-6 mx-auto " >
             <img
                 src="{% static 'images/laptop-mockup-quiz-creator.jpg' %}"
-                class="d-block mx-lg-auto img-fluid shadow-lg  rounded" alt="quizElements quiz survey creation creator on laptop" loading="lazy"
+                class="d-block mx-lg-auto img-fluid rounded" alt="quizElements quiz survey creation creator on laptop" loading="lazy"
                 style="max-height:30rem;" >
         </div>
     </div>
 
 			{% comment %} End main section {% endcomment %}
+
+            <div class="row text-center justify-content-center d-flex">
+                <i class="fa fa-chevron-down text-center  " style="font-size:10rem;col"></i>
+            </div>
 
 
 
