--- a/src/quizCreation/templates/element_forms/CharInput.html
+++ b/src/quizCreation/templates/element_forms/CharInput.html
@@ -33,7 +33,7 @@
                 {% else %}
                     data-dismiss="modal"
                 {% endif %}
-                class="btn btn-danger light"
+                class="btn btn-danger light" style="border-radius:0 !important;"
             >
                 {% if edit %}
                     Cancel
