--- a/src/quizCreation/templates/element_forms/all_elements_swatches.html
+++ b/src/quizCreation/templates/element_forms/all_elements_swatches.html
@@ -13,7 +13,7 @@
         >
             {% include 'element_choices.html' %}
             <div class="">
-                <button type="button" class="btn btn-danger light" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger light" style="border-radius:0 !important;" data-dismiss="modal">Cancel</button>
                 <button id="continueElementChocies" type="submit" class="btn btn-primary site-button">Continue</button>
             </div>
         </form>
