--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -39,7 +39,7 @@
                                     </div>
 
                                     <div class="text-center">
-                                        <button type="button" class="btn btn-danger light" data-dismiss="modal">Cancel</button>
+                                        <button type="button" class="btn btn-danger light" style="border-radius:0 !important;" data-dismiss="modal">Cancel</button>
                                         <button type="submit" class="btn btn-primary site-button">Continue</button>
                                     </div>
                                 </form>
@@ -70,7 +70,7 @@
 
                             </div>
                             <div class="text-center mb-3 pb-1">
-                                <button type="button" class="btn btn-danger light" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-danger light" style="border-radius:0 !important;" data-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
 
                             </div>
                             <div class="text-center mb-3 pb-1">
-                                <button type="button" class="btn btn-danger light" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-danger light" style="border-radius:0 !important;" data-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
