--- a/src/templates/home_site2/includes/footer.html
+++ b/src/templates/home_site2/includes/footer.html
@@ -12,7 +12,7 @@ Content body end
         <!--**********************************
             Footer start
         ***********************************-->
-<div class="footer px-2">
+<div class="footer px-2" style="background: white !important;">
     <nav class="navbar navbar-expand d-none d-sm-block">
         <div class="collapse navbar-collapse justify-content-center text-center">
             <div class="header-left">
