--- a/src/templates/home_site2/includes/header.html
+++ b/src/templates/home_site2/includes/header.html
@@ -35,10 +35,17 @@
 
         }
 
+        .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6, body {
+        
+                color: #302929 !important;
+        
+
+        }
 
 
         .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
             {{site.site_headings_css}}
+
         }
     {% endautoescape %}
 
