--- a/src/quizCreation/templates/element_choices.html
+++ b/src/quizCreation/templates/element_choices.html
@@ -17,7 +17,7 @@
     <div role="button" onclick="SelectDeselect(this);" id="card_text"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=text style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
-            <h4 class="card-title border border-dark border-3 p-3">Custom Text</h4>
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Custom Text</h4>
             <p class="text-small">Great for sales copy, instructions and information</p>
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
         </div>
@@ -26,7 +26,7 @@
     <div role="button" onclick="SelectDeselect(this);" id="card_AgreeDisagree"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=AgreeDisagree style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
-            <h4 class="card-title border border-dark border-3 p-3">Agree Disagree</h4>
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Agree Disagree</h4>
             <p class="text-small">A table of agree disagree questions where users can answer mostly agree, disagree etc...</p>
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
         </div>
@@ -36,7 +36,7 @@
     <div role="button" onclick="SelectDeselect(this);" id="card_TextInput"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=TextInput style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
-            <h4 class="card-title border border-dark border-3 p-3">Text input</h4>
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Text input</h4>
             <p class="text-small">Useful to get long text information from users</p>
 
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
@@ -51,7 +51,7 @@
     <div role="button" onclick="SelectDeselect(this);" id="card_MultipleChoice"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=MultipleChoice style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
-            <h4 class="card-title border border-dark border-3 p-3">Multiple Choice</h4>
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Multiple Choice</h4>
             <p class="text-small">Swatches for multiple choice questions</p>
 
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
@@ -62,7 +62,7 @@
     <div role="button" onclick="SelectDeselect(this);" id="card_SingleChoice"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=SingleChoice style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
-            <h4 class="card-title border border-dark border-3 p-3">Single Choice</h4>
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Single Choice</h4>
             <p class="text-small">Swatches where there is only a single choice</p>
 
 
@@ -76,7 +76,7 @@
     <div role="button" onclick="SelectDeselect(this);" id="card_CharInput"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=CharInput style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
-            <h4 class="card-title border border-dark border-3 p-3">Character input</h4>
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Character input</h4>
             <p class="text-small">Useful to get short text information from users</p>
 
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
@@ -86,7 +86,7 @@
     <div role="button" onclick="SelectDeselect(this);" id="card_NumberInput"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=NumberInput style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
-            <h4 class="card-title border border-dark border-3 p-3">Number input</h4>
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Number input</h4>
             <p class="text-small">A simple number input field</p>
 
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
@@ -96,7 +96,7 @@
     <div role="button" onclick="SelectDeselect(this);" id="card_EmailInput"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=EmailInput style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
-            <h4 class="card-title border border-dark border-3 p-3">Email input</h4>
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Email input</h4>
             <p class="text-small">Capture email addresses easily with this element</p>
 
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
@@ -106,7 +106,7 @@
     <div role="button" onclick="SelectDeselect(this);" id="card_ImageDisplay"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=ImageDisplay style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
-            <h4 class="card-title border border-dark border-3 p-3">Add Image</h4>
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Add Image</h4>
             <p class="text-small">Upload and display your own image</p>
 
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
