--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -13,9 +13,9 @@
             <div class="px-3 my-3">
                 <h5 class"my-3" >Editing quiz: {{user_quiz.name}}</h5>
             </div>
-            <div class="card-header d-sm-flex flex-wrap d-block pb-0 border-0 ">
+            <div class="px-3 text-center ">
 
-                <button type="button" class="btn btn-primary site-button mb-2" data-toggle="modal" data-target="#exampleModalCenter">Add quiz page</button>
+                <button type="button" class="btn btn-primary site-button m-2" data-toggle="modal" data-target="#exampleModalCenter"><i class="fa fa-plus"></i>  Add quiz page</button>
                 {% comment %} <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'preview_quiz' user_quiz.id %}" type="button" class="btn  mb-2 mr-2">View quiz preview</a> {% endcomment %}
 
 
@@ -48,10 +48,10 @@
                     </div>
                 </div>
 
-                <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button mb-2 ml-auto ">Link to take quiz</a>
-                <a href="{% url 'edit_quiz_completion_page' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button mb-2 ml-auto text-right">Edit quiz end </a>
+                <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button m-2">Link to take quiz</a>
+                <a href="{% url 'edit_quiz_completion_page' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button m-2">Edit quiz end </a>
 
-                <button type="button" class="btn btn-primary site-secondary-button  mb-2 ml-auto text-right" data-toggle="modal" data-target="#quizSettingsModal">Quiz settings</button>
+                <button type="button" class="btn btn-primary site-secondary-button m-2" data-toggle="modal" data-target="#quizSettingsModal">Quiz settings</button>
 
                 <div class="modal fade" id="quizSettingsModal">
                     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -77,7 +77,7 @@
                 </div>
 
 
-                <button type="button" class="btn btn-primary site-secondary-button  mb-2 ml-auto text-right" data-toggle="modal" data-target="#quizPaymentSettings">Accept payments</button>
+                <button type="button" class="btn btn-primary site-secondary-button m-2" data-toggle="modal" data-target="#quizPaymentSettings">Accept payments</button>
 
                 <div class="modal fade" id="quizPaymentSettings">
                     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
 
-                <a href="{% url 'add_product_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button mb-2 ml-auto text-right">Add product </a>
+                <a href="{% url 'add_product_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button mb-2 ">Add product </a>
 
             </div>
             <div class="card-body tab-content pt-2">
