--- a/src/quizCreation/templates/quiz_creation/quizes_list.html
+++ b/src/quizCreation/templates/quiz_creation/quizes_list.html
@@ -26,22 +26,32 @@
 
                 {% for quiz in quizes %}
 
-                    <div style="background-color:rgba(227, 227, 204, 0.3);
+                    <div style="border-color:#1ea7c5 !important;
+                                border: 1px solid;
                                 border-radius: 1.25rem;
                                 -webkit-transition: all 0.5s;
                                 -ms-transition: all 0.5s;
                                 transition: all 0.5s;
-                               " class="shadow  d-sm-flex d-block  py-3 list-row align-items-center my-5 col-lg-9 mx-auto justify-content-center">
+                               " class="shadow  py-3 my-5 col-lg-9 mx-auto ">
 
+                               <a type="button"
+                               hx-confirm="Are you sure you want to delete this quiz"
+                               hx-delete  ="{% url 'htmx_quiz_delete' quiz.id %}" class="ml-auto text-danger float-right"
+                               hx-target="#quizesList"
+           
+                            >
+                                Delete
+                            </a>
                         <div class="d-flex align-items-center">
+
 
                             <div class="info ">
                                 <a    href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' quiz.id %}" target="_blank"
-                                   type="button" class="mx-1"  >Open quiz in new tab</a> |
+                                   type="button" class="mx-1"  >Open quiz in new tab</a> <br>
 
 
                                 <a           id="copy-button{{quiz.id}}"          data-clipboard-target="#linkToQuiz{{quiz.id}}"
-                                   type="button" class=" dropdown-toggle mx-1" data-toggle="dropdown">Copy link to quiz</a> |
+                                   type="button" class=" dropdown-toggle mx-1" data-toggle="dropdown">Copy link to quiz</a> <br>
                                 <div class="dropdown-menu">
                                     <span class="dropdown-item" href="javascript:void()">Link successfully copied!</span>
                                 </div>
@@ -53,21 +63,13 @@
 
 
 
-                                <a type="button"
-                                   hx-confirm="Are you sure you want to delete this quiz"
-                                   hx-delete  ="{% url 'htmx_quiz_delete' quiz.id %}" class="mx-1 text-danger"
-                                   hx-target="#quizesList"
-
-                                >
-                                    Delete
-                                </a>
                                 <br>
                                 <h4 class="mt-5 pt-2">
                                     <small>Quiz name:</small>
 
                                     <p class="">{{quiz.name}}</p></h4>
 
-
+                                
 
                             </div>
 
@@ -75,20 +77,22 @@
                         <br>
                         <div class="g-4 text-right">
 
-                            <a class="btn btn-primary site-button my-1" href="{% url 'edit_quiz' quiz.id %}">
+                            <a class="btn btn-primary site-button " href="{% url 'edit_quiz' quiz.id %}">
                                 <div class="float-right">Manage <i class="fa fa-edit"></i></div>
                             </a>
 
-                            <a class="btn btn-primary site-secondary-button my-1 " href="{% url 'view_quiz_results' quiz.id %}">
+                            <a class="btn btn-primary site-secondary-button  " href="{% url 'view_quiz_results' quiz.id %}">
                                 <div class="float-right">View responses
                                     <i class="fa fa-eye"></i></div>
                             </a>
                         </div>
+                        
                         <br>
                         <br>
-
-
-
+                        
+                        
+                        
+            
                     </div>
 
 
